// START:types
syntax = "proto3";

package campsite.v1;

option go_package = "github.com/igor-baiborodine/api/campsite_v1";

message Booking {
  string UUID = 1;
  string Email = 2;
  string FullName = 3;
  string StartDate = 4;
  string EndDate = 5;
  bool   Active = 6;
}
// END:types
